Fix long content overlap in FIO Request details field

--- a/client/src/pages/WalletPage/styles/FioRecordFieldsList.module.scss
+++ b/client/src/pages/WalletPage/styles/FioRecordFieldsList.module.scss
@@ -23,6 +23,7 @@
       .content {
         margin-top: 15px;
         margin-bottom: 0;
+        word-break: break-word;
       }
     }
   }
